# musicTUI

./: .gitignore  .gitleaks.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  go.mod  go.sum  main.go
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-release.yml  ci.yml  release-please.yml  release.yml
bridge/: Cargo.toml
bridge/src/: fft.rs  lib.rs  player.rs  sink.rs  spectrum.rs
bridge/src/visualizer/: circular.rs  digital_rain.rs  flames.rs  frequency_bars.rs  galaxy.rs  mod.rs  oscilloscope.rs  particles.rs  peak_meter.rs  spectrum_analyzer.rs  waveform.rs
cmd/musictui-import/: auth.go  import.go  main.go  setup.go  status.go
docs/: SMOKE_TEST.md
internal/applemusic/: auth.go  client.go  import.go  library.go  types.go
internal/audio/: analyzer.go  engine.go  engine_test.go  proc_unix.go  proc_windows.go  spectrum.go
internal/config/: config.go  config_test.go
internal/importbackend/: client.go  session.go  sse.go  types.go
internal/lyrics/: client.go  client_test.go
internal/model/: playback.go  queue.go  queue_test.go  types.go  views.go
internal/mpris/: mpris.go  mpris_other.go
internal/spotify/: auth.go  backup.go  client.go  client_test.go  mapping.go
internal/termcap/: caps.go  caps_test.go  kitty.go  kitty_other.go  kitty_test.go  kitty_unix.go  probe_other.go  probe_session_other.go  probe_session_unix.go  probe_unix.go  probe_windows.go
internal/theme/: theme.go  theme_test.go
internal/tui/: app.go  (+5 more)
(+60 files in other folders)
