[package]
name = "audio-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui = "0.29"
librespot = { git = "https://github.com/librespot-org/librespot.git", default-features = false, features = ["rodio-backend", "rustls-tls-native-roots"] }
rustfft = "6"
ringbuf = "0.4"
dirs = "5"

[[bin]]
name = "player-bridge"
path = "src/bin/player_bridge.rs"

[profile.release]
strip = true
lto = true
opt-level = "z"
